--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 收费制动？
 <a href = "sub/index.html">TSE</a><br>
 能够访问子页不？
+<a href = "sub/ch01.html">Charpter One</a><br>
+<a href = "sub/ch02.html">Charpter Two</a><br>
+<a href = "sub/ch03.html">Charpter Three</a><br>
